install_man(
    'gensio.5',
    'gensio_acc_accept_s.3',
    'gensio_acc_control.3',
    'gensio_accepter_event.3',
    'gensio_acc_get_type.3',
    'gensio_acc_set_accept_callback_enable.3',
    'gensio_acc_set_callback.3',
    'gensio_acc_shutdown.3',
    'gensio_acc_startup.3',
    'gensio_add_default.3',
    'gensio_alloc_channel.3',
    'gensio_close.3',
    'gensio_control.3',
    'gensio_err.3',
    'gensio_event.3',
    'gensio_get_type.3',
    'gensio_mdns.3',
    'gensio_open.3',
    'gensio_os_funcs.3',
    'gensio_set_callback.3',
    'gensio_set_log_mask.3',
    'gensio_set_read_callback_enable.3',
    'gensio_set_sync.3',
    'gensio_to_sergensio.3',
    'gensio_write.3',
    'sergensio.5',
    'sergensio_b_alloc.3',
    'sergensio_baud.3',
    'sergensio_event.3',
    'str_to_gensio.3',
    'str_to_gensio_accepter.3',
)
